// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Rendering works 1`] = `
<span
  data-bangle-attrs="{\\"emojiKind\\":\\"horse\\"}"
  data-bangle-name="emoji"
  draggable="true"
>
  🐴
</span>
`;

exports[`Unknown emoji puts question mark 1`] = `
<span
  data-bangle-attrs="{\\"emojiKind\\":\\"unknown_emoji\\"}"
  data-bangle-name="emoji"
  draggable="true"
>
  ❓
</span>
`;
